<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlAdvertiseMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_115sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/light_red_square"
        android:minHeight="@dimen/_50sdp"
        android:orientation="vertical">
        ​

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_yellow_square"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_3sdp"
            android:text="@string/ad_attribution"
            android:fontFamily="@font/author_semibold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
        ​
        ​

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingRight="@dimen/_5sdp">
            ​
            ​

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                ​
                ​

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifView"
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_predchamp_gif_2"
                    android:scaleType="fitXY"
                    android:visibility="visible" />
                ​
                ​

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_5sdp">
                    ​
                    ​

                    <TextView
                        android:id="@+id/txtTitleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/play_and_win_coins_daily"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/author_bold"
                        android:visibility="visible" />
                    ​

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:text="@string/play_quiz_win_upto_50_000_coins"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/author_regular"
                        android:visibility="visible" />
                    ​
                </LinearLayout>
            </LinearLayout>
            ​
            ​

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                ​

                <ImageView
                    android:id="@+id/ivBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_138sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/white"
                    android:src="@drawable/ic_predchamp_small_native2"
                    android:visibility="gone" />
                ​ ​

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_5sdp">
                    ​


                </LinearLayout>
                <TextView
                    android:id="@+id/ad_call_to_action"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/btn_ads_blue_btn"
                    android:gravity="center"
                    android:textColor="@color/dark_brown"
                    android:clickable="false"
                    android:enabled="false"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/author_bold"
                    android:visibility="visible"
                    android:text="@string/play_now" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>